[package]
edition = "2021"
name = "bevy_bundletree"
version = "0.1.0"
authors = ["Josiah Putman <joshikatsu@gmail.com>"]
description = "Provides a derive proc macro for bevy::bundletree::BundleEnum"
documentation = "https://docs.rs/bevy_bundletree/latest/bevy_bundletree"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Katsutoshii/bevy_bundletree"
repository = "https://github.com/Katsutoshii/bevy_bundletree"
keywords = [
    "bevy"
]
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.13"}
bevy_bundletree_derive = { path = 'bevy_bundletree_derive', version = "0.1" }

[[example]]
name = "ui"
