
[package]
edition = "2021"
name = "bevy_bundletree_derive"
version = "0.1.1"
readme = "README.md"
keywords = [
    "bevy",
    "derive",
]
categories = ["no-std"]
license = "MIT"
repository = "https://github.com/Katsutoshii/bevy_bundletree"

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
