
[package]
edition = "2021"
name = "bevy_bundletree_derive"
version = "0.1.1"
keywords = [
    "bevy",
    "derive",
]
categories = ["no-std"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/bevy_bundletree/latest/bevy_bundletree"
repository = "https://github.com/Katsutoshii/bevy_bundletree"
readme = "README.md"
homepage = "https://github.com/Katsutoshii/bevy_bundletree"
description = "Derive macros for `bevy_bundletree`."

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0"

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
